# Miette

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
miette/: __init__.py  doc.py  exceptions.py  miette.py
miette/cfb/: __init__.py  constants.py  entry.py  reader.py
miette/doc/: reader.py
miette/tools/: hex_dump.py
src/: __init__.py  miette.py
src/cfb/: entry.py  reader.py
src/doc/: reader.py  text.py
src/tools/: __init__.py  hex_dump.py
tests/: conftest.py  test_doc.py  test_exceptions.py
tests/data/: simple.doc
tests/doc/: gd_lorem_ipsum.doc  gd_vesna_yandex_ru.doc  mw_lorem_ipsum.doc  mw_vesna_yandex_ru.doc  oo_lorem_ipsum.doc  oo_vesna_yandex_ru.doc  te_lorem_ipsum.doc  te_vesna_yandex_ru.doc
